# amp-scheduling

./: README.md  meson.build  ultmigration.c  ultmigration.h  ultmigration.s  ultmigration_dummy.c  ultmigration_pstate.c
benchmark/: Makefile  cfg2tsv  log2tsv  log_freq2tsv  plot.r  plot_data.r  plot_power.r  power_log.awk  power_log.r  powermeter2tsv  rapl2tsv  run
benchmark/results/2017-12-11_01/: log  powermeter  rapl
benchmark/results/2017-12-11_02/: log  powermeter  rapl
benchmark/results/2017-12-11_03/: log  powermeter  rapl
benchmark/results/2017-12-18_01/: log  powermeter  rapl
benchmark/results/2018-01-25_01/: log  powermeter  rapl
benchmark/results/2018-01-25_02/: log  powermeter  rapl
benchmark/results/2018-01-30_01/: log  powermeter  rapl
benchmark/results/2018-02-01_01/: log  powermeter  rapl
benchmark/results/2018-02-09_01/: log
benchmark/results/2018-02-21_01/: log
benchmark/results/2018-02-22_01/: log
benchmark/results/2018-02-23_01/: log  powermeter  rapl
benchmark/results/2018-02-23_02/: log  powermeter  rapl
benchmark/results/2018-02-24_01/: log  powermeter
benchmark/results/2018-02-25_01/: log  powermeter
benchmark/results/2018-02-26_01/: log  powermeter
benchmark/results/2018-02-27_01/: log  powermeter
plot/: frequency  frequency.gpi  rapl  rapl.gpi  swpcfg.awk  swpgraph.awk  swpgraph2.awk
pmc/: meson.build  pmc.c  pmc.h
ryzenpower/: Makefile  log2tsv  plot.r  plot_data.r  power_log.awk  run
ryzenpower/results/2018-02-08_01/: log  powermeter  rapl  vcore
ryzenpower/results/2018-02-21_01/: log  powermeter  rapl  vcore
ryzenpower/results/2018-02-21_02/: log  powermeter  rapl  vcore
ryzenpower/results/2018-02-25_01/: log  powermeter  rapl  vcore
swp/: meson.build  swp.cpp  swp.h  swp_dummy.cpp  swp_migrate.cpp  swp_util.cpp  swp_util.h
test/: meson.build  micro.c  micro.h  micro_pmc.c  micro_swp.c  random.h  simple.c  ult_idle.c  ultoverhead.c
tools/: amdccx.c  amdccx.h  amdpstate.c  l3topology.c  meson.build  msrtools.c  msrtools.h
ultoverhead/: Makefile  log2tsv  plot.r  plot_data.r  run
ultoverhead/results/2018-02-08_01/: log  powermeter  rapl
ultoverhead/results/2018-02-21_01/: log  powermeter  rapl
ultoverhead/results/2018-02-21_02/: log  powermeter  rapl
ultoverhead/results/2018-02-25_01/: log  powermeter  rapl
